--- a/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
+++ b/SKTwitterClient/SKTwitterClient/Base.lproj/Main.storyboard
@@ -56,9 +56,16 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BPj-Tq-rVY">
-                                <rect key="frame" x="20" y="342.5" width="335" height="62"/>
-                                <state key="normal" image="ButtonTwitterNormal"/>
+                                <rect key="frame" x="20" y="346.5" width="335" height="54"/>
+                                <color key="backgroundColor" red="0.36470588240000001" green="0.6588235294" blue="0.86274509799999999" alpha="1" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="zEI-yE-AAF"/>
+                                </constraints>
+                                <state key="normal" title="Log in with twitter"/>
                                 <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="corner">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="shadowRadiusView">
                                         <real key="value" value="1"/>
                                     </userDefinedRuntimeAttribute>
@@ -501,7 +508,6 @@
     </scenes>
     <resources>
         <image name="BG" width="2025" height="3600"/>
-        <image name="ButtonTwitterNormal" width="290" height="62"/>
         <image name="arrow_back" width="12" height="19"/>
         <image name="twitterIcon" width="1139" height="926"/>
     </resources>
